--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./Assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon: Services</title> <!-- change title to make more descriptive -->
 </head>
 
 <body>
@@ -27,21 +27,21 @@
     <figure class="hero"></figure> <!-- change tag to figure -->
     <main class="content"> <!-- change tag to main -->
         <section id="search-engine-optimization" class="search-engine-optimization"> <!-- change tag to section -->
-            <img src="./Assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./Assets/images/search-engine-optimization.jpg" alt="Overhead view of deskspace with laptop and office supplies" class="float-left" />  <!-- add alt tag -->
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">  <!-- change tag to section -->
-            <img src="./Assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./Assets/images/online-reputation-management.jpg" alt="Individual using smartphone while viewing reputation chart on laptop" class="float-right" /> <!-- add alt tag -->
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">  <!-- change tag to section -->
-            <img src="./Assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./Assets/images/social-media-marketing.jpg" alt="Individuals in meeting with cartoon social media icons on table" class="float-left" /> <!-- add alt tag -->
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -51,21 +51,21 @@
     <aside class="benefits"> <!-- change tag to aside -->
         <section class="benefit-lead"> <!-- change tag to section -->
             <h3>Lead Generation</h3>
-            <img src="./Assets/images/lead-generation.png" />
+            <img src="./Assets/images/lead-generation.png" alt="cartoon image of gear entering funnel to generate money"/> <!-- add alt tag -->
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
         <section class="benefit-brand"> <!-- change tag to section -->
             <h3>Brand Awareness</h3>
-            <img src="./Assets/images/brand-awareness.png" />
+            <img src="./Assets/images/brand-awareness.png" alt="cartoon image of lightbulb going off on person's head"/>  <!-- add alt tag -->
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
         <section class="benefit-cost"> <!-- change tag to section -->
             <h3>Cost Management</h3>
-            <img src="./Assets/images/cost-management.png" />
+            <img src="./Assets/images/cost-management.png" alt="cartoon image of gear with three money coins below"/>  <!-- add alt tag -->
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
