--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./Assets/css/style.css">
-    <title>Horiseon: Services</title> <!-- change title to make more descriptive -->
+    <title>Horiseon Online Marketing</title> <!-- change title to make more descriptive -->
 </head>
 
 <body>
